--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,8 +3,8 @@ body {
     text-align: center;
     font-family: arial;
     font-size: 10px;
-    margin: 1%;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
     
 }
 
@@ -17,5 +17,5 @@ body {
 }
 
 #contenedor h1{
-    font-size: 20%;
+    font-size: 20px;
 }
