--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,28 @@
 body {
-    color: deeppink;
+    color: black;
     text-align: center;
     font-family: arial;
-    font-size: 10px;
+    font-size: 30px;
     margin: 0;
     padding: 0;
     
 }
+#cabecera{
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5) ;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
 
+}
+
+#cabecera #tagline{
+    margin: 1em 0 0 0;
+    font-weight: normal;
+    font-size: 0.8em;
+
+}
 #contenedor {
     width: 70%;
     padding: 1em;
@@ -15,7 +30,6 @@ body {
     border: 1px solid #000;
     margin: 0 auto;
 }
-
 #contenedor h1{
-    font-size: 20px;
+    font-size: 70px;
 }
