Agregado el contenido adicional de master y una mejor tipografia

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body {
     color: deeppink;
     text-align: center;
-    font-family: arial;
+    font-family: Courier;
     font-size: 10px;
     margin: 0;
     padding: 0;
