--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,10 @@
 body {
-    color: black;
+    color: red;
     text-align: center;
-<<<<<<< HEAD
     font-family: Courier;
     font-size: 10px;
-=======
     font-family: arial;
     font-size: 30px;
->>>>>>> cabecera
     margin: 0;
     padding: 0;
     
